<resources>
    <string name="app_name">VoiceMod</string>
    <string name="TR_GRABAR_VIDEO">Grabar vídeo</string>
    <string name="TR_AJUSTES">Ajustes</string>
    <string name="TR_ATENCION">Atención</string>
    <string name="TR_ACEPTAR">Aceptar</string>
    <string name="TR_ES_NECESARIO_ACEPTAR_PERMISOS">Es necesario aceptar los permisos para poder visualizar los vídeos grabados y grabar nuevos</string>
    <string name="TR_CANCELAR">Cancelar</string>
    <string name="TR_PERMISO_LEER_ALMACENAMIENTO_NECESARIO">El permiso para leer el almacenamiento del teléfono es necesario para poder visualizar los vídeos de la galería.</string>
    <string name="TR_PERMISO_CAMARA_ES_NECESARIO">El permiso de la cámara es necesario para poder grabar vídeos.</string>
    <string name="TR_TODAVIA_NO_TIENES_NINGUN_VIDEO">Todavía no has grabado ningún vídeo. ¡Anímate y graba uno!</string>
    <string name="TR_OCURRIO_UN_ERROR_RECUPERANDO_LOS_VIDEOS">Oops! Vaya, parece que ocurrió un error al recuperar los vídeos.</string>
    <string name="TR_OCURRIO_UN_ERROR_GUARDANDO_VIDEO">Oops! Vaya, parece que ocurrió un error al guardar el vídeo</string>
    <string name="menu_item_delete">Eliminar</string>
    <string name="title_activity_video_detail">VideoDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="TR_ESTAS_SEGURO_ELIMINAR_VIDEO">Vas a eliminar este vídeo. Esta acción no se puede deshacer. ¿Estás seguro?</string>
    <string name="TR_NO_SE_PUDO_ELIMINAR">No fue posible eliminar el vídeo. Vuélvelo a intentar.</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="TR_TAMANYO_VIDEO">Tamaño del vídeo</string>
    <string name="TR_QUIERES_LIMITAR_TAMANYO_VIDEO">¿Quieres limintar el tamaño del vídeo?</string>
    <string name="TR_LIMITE_TAMANYO">Límite de tamaño</string>
    <string name="TR_DURACION_VIDEO">Duración del vídeo</string>
    <string name="TR_LIMITE_DURACION">Límite de duración</string>
    <string name="TR_QUIERES_LIMITAR_DURACION_VIDEO">¿Quieres limintar la duración del vídeo?</string>
    <string name="TR_GRABA_LOS_VIDEOS_CALIDAD_ALTA">Graba los vídeos con calidad alta</string>
    <string name="TR_ALTA_CALIDAD">Alta calidad</string>
    <string name="TR_UN_MINUTO">1 Minuto</string>
    <string name="TR_UN_MEGABYTE">1 Megabyte</string>
    <string name="TR_PLACEHOLDER_MINUTOS">%d minutos</string>
    <string name="TR_PLACEHOLDER_MEGABYTES">%d megabytes</string>
</resources>